Preview not showing rims fixed, load all builder images paths and save it in memory on the service, builder options changed to not call http methods, and customize button functionality added

--- a/public/src/app/car_builder/general-feature-picker/general-feature-picker.component.css
+++ b/public/src/app/car_builder/general-feature-picker/general-feature-picker.component.css
@@ -10,6 +10,6 @@
     padding-top: 10% 
 }
 
-.imageContainer.active{
+.active{
     border: 2px solid rgb(203, 159, 61);
 }
